--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "tinky",
+  "name": "tinky-progress-bar",
   "version": "0.1.0",
-  "description": "React for CLIs, re-imagined with the Taffy engine",
+  "description": "A customizable progress bar component for Tinky applications.",
   "keywords": [
     "react",
     "ink",
-    "taffy",
+    "tinky",
     "cli",
     "terminal",
-    "layout-engine",
-    "flexbox",
-    "grid",
-    "renderer"
+    "progress-bar",
+    "component",
+    "ui"
   ],
-  "homepage": "https://github.com/ByteLandTechnology/tinky#readme",
+  "homepage": "https://github.com/ByteLandTechnology/tinky-progress-bar#readme",
   "bugs": {
-    "url": "https://github.com/ByteLandTechnology/tinky/issues"
+    "url": "https://github.com/ByteLandTechnology/tinky-progress-bar/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ByteLandTechnology/tinky.git"
+    "url": "git+https://github.com/ByteLandTechnology/tinky-progress-bar.git"
   },
   "license": "MIT",
   "author": {
-    "name": "ByteLandTechnology"
+    "name": "ByteLand Technology Limited"
   },
   "type": "module",
   "main": "./lib/index.js",
   "scripts": {
-    "test": "tsc",
+    "test": "vitest run --coverage",
     "build": "tsc && npm run docs",
-    "lint": "eslint src",
+    "lint": "eslint src tests",
     "prepublish": "npm run build",
     "prepare": "husky",
     "docs": "typedoc --plugin typedoc-plugin-markdown --disableSources --out docs/api && prettier --write docs/api"
@@ -40,6 +39,9 @@
     "./lib/*"
   ],
   "typings": "./lib/index.d.ts",
+  "dependencies": {
+    "tinky-theme": "^1.0.1"
+  },
   "devDependencies": {
     "@commitlint/cli": "^20.3.0",
     "@commitlint/config-conventional": "^20.3.0",
@@ -49,6 +51,8 @@
     "@semantic-release/github": "^12.0.2",
     "@semantic-release/npm": "^13.1.3",
     "@semantic-release/release-notes-generator": "^14.1.0",
+    "@vitest/coverage-v8": "4.0.18",
+    "ansis": "^3.3.2",
     "conventional-changelog-conventionalcommits": "^9.1.0",
     "eslint": "^9.39.2",
     "eslint-plugin-react": "^7.37.5",
@@ -57,9 +61,12 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.4",
     "semantic-release": "^25.0.2",
+    "tinky": "^1.4.3",
+    "tinky-test": "^1.0.0",
     "typedoc": "^0.28.16",
     "typedoc-plugin-markdown": "^4.9.0",
-    "typescript-eslint": "^8.54.0"
+    "typescript-eslint": "^8.54.0",
+    "vitest": "^4.0.18"
   },
   "commitlint": {
     "extends": [
